fixed issues with hero styling not fitting + began overlapping main element

--- a/react-app/src/components/SplitDashboard/SplitDashboard.css
+++ b/react-app/src/components/SplitDashboard/SplitDashboard.css
@@ -1,5 +1,11 @@
-.split-dashboard-container {
+
+.split-dashboard-right {
+    margin-left: 240px;
     display: flex;
+    flex-direction: column;
+    background-color: black;
+    height: 1000px;
+    position: relative;
 }
 
 ::-webkit-scrollbar {
